--- a/index.html
+++ b/index.html
@@ -3,11 +3,66 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0;} </style>
-    <script src="p5.min.js"></script>
-    <!-- <script src="addons/p5.sound.min.js"></script> -->
-    <script src="sketch.js"></script>
+    <meta name="theme-color" content="#000000">
+    <title>👁️</title>
+    <style>
+      @font-face {
+        font-family: "din";
+        src: url(din.ttf);
+      }
+      * {
+        font-family: "din";
+        color: #000;
+      }
+      html, body {
+        padding: 0;
+        margin: 0;
+        background-color: #e3c9bc;
+      }
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      button {
+        font-size: 2em;
+        top: 20px;
+        left: 20px;
+        background-color: #e3c9bc;
+        outline: none;
+        border: solid 4px #000;
+        padding: 25px 18px 20px 18px;
+        cursor: pointer;
+      }
+      /* button:hover {
+        color: #e3c9bc;
+        background-color: #000;
+      } */
+      p {
+        font-size: 1.7em;
+        top: 75px;
+        left: 20px;
+      }
+      p, button {
+        position: absolute;
+        z-index: 2;
+        line-height: 0;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+      canvas {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    </style>
+    <script src="p5.min.js" type="text/javascript"></script>
+    <!-- <script src="addons/p5.sound.min.js" type="text/javascript"></script> -->
+    <script src="sketch.js" type="text/javascript"></script>
   </head>
   <body>
+    <button onclick="startSet()">RESET POSITION</button>
+    <p>I follow you. Please don't touch me!</p>
   </body>
 </html>
